tests/NormalTests/paczka1/fuzzy1/13636446.err
Error in line 1: D3HVO5 S194 88,5
Error in line 8: S19\ S19\ \8,0
Error in line 13: NZz S194 66,4
Error in line 15: NZz A243 46,5
Error in line 22: ZetNd0c6Uu A243 86,7
Error in line 25: S194 A531 98,3
